# libvserver

./: AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.cvs  Makefile.svn  NEWS  README  TODO  aminclude.am  configure.ac  configure.in  doxygen.cfg.in  mkrelease
contrib/: vserver.i
contrib/ruby/: Makefile.swig  extconf.rb
lib/: Makefile.am  context.c  cvirt.c  debug.c  dlimit.c  inode.c  libvserver.h  limit.c  namespace.c  network.c  sched.c  signal.c  switch.c  syscall-alternative.h  syscall-vserver.h  syscall.c  syscall.h  uts.c  versions  vserver.h
linux/: capability.h  sched.h
linux/vserver/: cacct_def.h  context.h  cvirt.h  cvirt_cmd.h  dlimit.h  dlimit_cmd.h  inode.h  network.h  sched.h  sched_cmd.h  space_cmd.h  switch.h
m4/: dietlibc.m4  kernel.m4  syscall.m4
ruby/: Makefile.swig  extconf.rb  libvserver.c  libvserver.i  vserver.i
src/: Makefile.am  bcaps-list.c  ccaps-list.c  cflags-list.c  context.c  cvirt.c  debug.c  dlimit.c  iattr-list.c  inode.c  legacy.c  limit.c  list.c  memcpy.h  namespace.c  network.c  nflags-list.c  personality-list.c  personalityflag-list.c  rlimit-list.c  sched-list.c  sched.c  signal.c  switch.c  syscall.c  versions  vhi-list.c  vserver.h
src/lib/: Makefile.am  cacct.c  context.c  cvirt.c  debug.c  dlimit.c  inode.c  limit.c  namespace.c  network.c  sched.c  signal.c  switch.c  syscall.c  syscall.h  vserver.h
src/list/: Makefile.am  Makefile.in  bcaps.c  ccaps.c  cflags.c  dimof.h  ncaps.c  nflags.c  personality.c  personalitytype.c
src/list/listparser/: Makefile.am  Makefile.in  listparser-uint32.c  listparser-uint64.c  listparser.h
src/list/val2text/: Makefile.am  Makefile.in  val2text-uint32.c  val2text-uint64.c  val2text.h
src/tools/: Makefile.am  dx.8  dx.8.xml  dx.c  ix.8  ix.8.xml  ix.c  lists.c  msg.c  ns.8  ns.8.xml  ns.c  nx.8  nx.8.xml  nx.c  tools.h  vlist.c  vr.8  vr.8.xml  vr.c  vx.8  vx.8.xml  vx.c
tools/: Makefile.am  tools.h  vcontext.c  vdlimit.c  vinfo.c  vinode.c  vlimit.c  vnamespace.c  vnetwork.c  vsched.c  vsignal.c  vuname.c
trunk/: ChangeLog  Makefile.am  NEWS  README  configure.in  mkrelease
trunk/lib/: Makefile.am  context.c  cvirt.c  dlimit.c  namespace.c  sched.c  switch.c  vserver.h
trunk/tools/: Makefile.am  tools.h  vcontext.c  vinfo.c  vlimit.c  vnamespace.c  vsched.c  vsignal.c
util/: Makefile.am  bcaps-list.c  ccaps-list.c  cflags-list.c  flagparser.c  iattr-list.c  list.c  list.h  nflags-list.c  personality-list.c  personalityflag-list.c  rlimit-list.c  sched-list.c  vhi-list.c  vserver-util.h
