# Top level makefile
SUBDIRS = lib tools

nobase_include_HEADERS = \
	linux/vserver/context_cmd.h \
	linux/vserver/context.h \
	linux/vserver/cvirt_cmd.h \
	linux/vserver/cvirt_def.h \
	linux/vserver/cvirt.h \
	linux/vserver/debug.h \
	linux/vserver/debug_cmd.h \
	linux/vserver/dlimit_cmd.h \
	linux/vserver/dlimit.h \
	linux/vserver/inode_cmd.h \
	linux/vserver/inode.h \
	linux/vserver/limit_cmd.h \
	linux/vserver/limit_def.h \
	linux/vserver/limit.h \
	linux/vserver/namespace_cmd.h \
	linux/vserver/namespace.h \
	linux/vserver/network_cmd.h \
	linux/vserver/network.h \
	linux/vserver/sched_cmd.h \
	linux/vserver/sched_def.h \
	linux/vserver/sched.h \
	linux/vserver/signal_cmd.h \
	linux/vserver/switch.h \
	linux/vserver/xid.h
