# Copyright 2005 The libvserver Developers
# See AUTHORS for details
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by  *
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the
# Free Software Foundation, Inc.,
# 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

SUBDIRS = src

nobase_include_HEADERS = linux/vserver/context_cmd.h \
                         linux/vserver/context.h \
                         linux/vserver/cvirt_cmd.h \
                         linux/vserver/cvirt_def.h \
                         linux/vserver/cvirt.h \
                         linux/vserver/debug.h \
                         linux/vserver/debug_cmd.h \
                         linux/vserver/dlimit_cmd.h \
                         linux/vserver/dlimit.h \
                         linux/vserver/inode_cmd.h \
                         linux/vserver/inode.h \
                         linux/vserver/limit_cmd.h \
                         linux/vserver/limit_def.h \
                         linux/vserver/limit.h \
                         linux/vserver/namespace_cmd.h \
                         linux/vserver/namespace.h \
                         linux/vserver/network_cmd.h \
                         linux/vserver/network.h \
                         linux/vserver/sched_cmd.h \
                         linux/vserver/sched_def.h \
                         linux/vserver/sched.h \
                         linux/vserver/signal_cmd.h \
                         linux/vserver/switch.h \
                         linux/vserver/xid.h
