AC_INIT(libvserver, 0.2, [http://dev.croup.de/proj/libvserver])

AC_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE()


# Checks for programs.
#AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
#AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdint.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_UID_T
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T

# Checks for library functions.
AC_CHECK_FUNCS([strcasecmp strpbrk])

AC_CONFIG_FILES([Makefile
                 lib/Makefile
                 tools/Makefile])
AC_OUTPUT
