# Generic configuration
AC_INIT(libvserver, 0.2, [http://dev.croup.de/proj/libvserver])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE()

# Disable shared objects by default
# until the errno fsck up is fixed
AC_DISABLE_SHARED

# Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_STDBOOL
AC_CHECK_HEADERS([stdint.h unistd.h])

# Checks for typedefs
AC_TYPE_UID_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T

# Checks for compiler characteristics.
AC_C_CONST
AC_C_INLINE

# Checks for library functions.
AC_CHECK_FUNCS([strcasecmp strpbrk])

# Output
AC_CONFIG_FILES([Makefile
                 lib/Makefile
                 tools/Makefile])
AC_OUTPUT
