INCLUDES = -I$(top_srcdir)/lib -I$(top_srcdir)
METASOURCES = AUTO

sbin_PROGRAMS = vcontext vnamespace vlimit vsched vnetwork vdlimit vinode vinfo vsignal vuname

vcontext_SOURCES = vcontext.c
vcontext_LDADD = $(top_builddir)/lib/libvserver.a

vnamespace_SOURCES = vnamespace.c
vnamespace_LDADD = $(top_builddir)/lib/libvserver.a

vlimit_SOURCES = vlimit.c
vlimit_LDADD = $(top_builddir)/lib/libvserver.a

vsched_SOURCES = vsched.c
vsched_LDADD = $(top_builddir)/lib/libvserver.a

vnetwork_SOURCES = vnetwork.c
vnetwork_LDADD = $(top_builddir)/lib/libvserver.a

vdlimit_SOURCES = vdlimit.c
vdlimit_LDADD = $(top_builddir)/lib/libvserver.a

vinfo_SOURCES = vinfo.c
vinfo_LDADD = $(top_builddir)/lib/libvserver.a

vinode_SOURCES = vinode.c
vinode_LDADD = $(top_builddir)/lib/libvserver.a

vsignal_SOURCES = vsignal.c
vsignal_LDADD = $(top_builddir)/lib/libvserver.a

vuname_SOURCES = vuname.c
vuname_LDADD = $(top_builddir)/lib/libvserver.a
